Kubernetes-Training-Complete-v2/03-Applications/App-03-Three-Tier-Store/kubernetes/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: store
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
